--- a/.env-sample
+++ b/.env-sample
@@ -1,10 +1,44 @@
-SERVER_URL="0.0.0.0:5000"
-SERVER_READ_TIMEOUT=60
 
-JWT_SECRET_KEY="secret"
-JWT_SECRET_KEY_EXPIRE_MINUTES_COUNT=15
-
-DB_SERVER_URL="host=localhost port=5432 user=postgres password=password dbname=postgres sslmode=disable"
+# Postgres Live
+API_SECRET=9xpto@22 #Used when creating a JWT. It can be anything
+DB_HOST=127.0.0.1
+DB_DRIVER=postgres
+DB_USER=postgres
+DB_PASSWORD=qwerty1234q
+DB_NAME=fullstack_api
+DB_PORT=5432 #Default postgres port
 DB_MAX_CONNECTIONS=100
 DB_MAX_IDLE_CONNECTIONS=10
 DB_MAX_LIFETIME_CONNECTIONS=2
+
+# DB_SERVER_URL="host=localhost port=5432 user=postgres password=password dbname=postgres sslmode=disable"
+
+# Postgres Test
+TestApiSecret=9xpto@22
+TestDbHost=127.0.0.1
+TestDbDriver=postgres
+TestDbUser=qwerty1234q
+TestDbPassword=password
+TestDbName=fullstack_api_test
+TestDbPort=5432
+DB_MAX_CONNECTIONS=100
+DB_MAX_IDLE_CONNECTIONS=10
+DB_MAX_LIFETIME_CONNECTIONS=2
+
+# Mysql Live
+# API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
+# DB_HOST=127.0.0.1
+# DB_DRIVER=mysql 
+# DB_USER=username
+# DB_PASSWORD=password
+# DB_NAME=fullstack_api
+# DB_PORT=3306 #Default mysql port
+
+# Mysql Test
+# TestApiSecret=98hbun98h
+# TestDbHost=127.0.0.1
+# TestDbDriver=mysql
+# TestDbUser=username
+# TestDbPassword=password
+# TestDbName=fullstack_api_test
+# TestDbPort=3306
